category fix; adding labels to categories
