# routes/categories.js
@@ -1,6 +1,8 @@
 const createCategory = require('../middlewares/category').createCategory;
 const updateCategory = require('../middlewares/category').updateCategory;
 const deleteCategory = require('../middlewares/category').deleteCategory;
+const addNewLabelToCategory = require('../middlewares/category').addNewLabelToCategory;
+const addNewLabel = require('../middlewares/category').addNewLabel;
 
 
 module.exports = app => {
@@ -16,5 +18,10 @@ module.exports = app => {
     app.delete('/category/:id',
         deleteCategory
     );
+
+    app.post('/category/addLabel/:id',
+        addNewLabel,
+        addNewLabelToCategory
+    ); 
 
 };
